syntax = "proto3";
package mapreduce;

option go_package = "go/mr";

enum TaskType {
  None = 0;
  Map = 1;
  Reduce = 2;
}

message RequestArgs {}

message RequestReply {
  TaskType kind = 1;
  string filename = 2;
  int32 task_no = 3;
  int32 n_reduce = 4;
  bool done = 5;
  repeated string intermediates = 6;
}

message ReportArgs {
  TaskType kind = 1;
  string task = 2;
  int32 id = 4;
  repeated string intermediates = 5;
}

message ReportReply {}

service MapReduce {
  // Workers request map/reduce tasks from coordinator
  rpc RequestTask(RequestArgs) returns (RequestReply);

  // Workers report map/reduce results
  rpc ReportTask(ReportArgs) returns (ReportReply);
}
